style updates and fix referral link signup on mobile responsiveness

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -40,6 +40,14 @@ table td, table th {
     .right-panel {
         margin-left: 84px;
     }
+
+    .stat-widget-five .stat-content {
+        margin-left: 45px;
+    }
+    .stat-widget-five .stat-icon {
+        font-size: 25px;
+        padding-top: 3px;
+    }
 }
 
 @media (max-width: 768px) {
@@ -49,5 +57,19 @@ table td, table th {
 
     .right-panel .menutoggle {
         padding-top: 17px;
+    }
+
+    #feature_signup.card {
+        padding-top: 45px !important;
+    }
+}
+
+@media(max-width: 425px) {
+    .stat-widget-five .stat-icon {
+        font-size: 50px;
+    }
+
+    .stat-widget-five .stat-content {
+        margin-left: 85px;
     }
 }
